@@ -1,13 +1,11 @@
 package com.saphienyako.feywild.patchouli.processor.base;
 
 import net.minecraft.client.Minecraft;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.TranslatableComponent;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.crafting.Recipe;
-import net.minecraft.world.item.crafting.RecipeManager;
-import net.minecraft.world.level.Level;
-import org.jetbrains.annotations.NotNull;
+
+import net.minecraft.item.crafting.IRecipe;
+import net.minecraft.item.crafting.RecipeManager;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.text.TranslationTextComponent;
 import vazkii.patchouli.api.IComponentProcessor;
 import vazkii.patchouli.api.IVariable;
 import vazkii.patchouli.api.IVariableProvider;
@@ -15,27 +13,36 @@ import vazkii.patchouli.api.IVariableProvider;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public abstract class FeywildProcessor implements IComponentProcessor {
 
     @Nullable
-    private Recipe recipe;
+    private IRecipe<?>  recipe;
+
 
     @Override
-    public void setup(@NotNull IVariableProvider variables) {
+    public void setup(@Nonnull IVariableProvider iVariableProvider) {
         RecipeManager manager = Objects.requireNonNull(Minecraft.getInstance().level).getRecipeManager();
         recipe = manager.byKey(Objects.requireNonNull(ResourceLocation.tryParse(getRecipeId()))).orElseThrow(IllegalArgumentException::new);
     }
 
+
+    @Nonnull
     @Override
-    public @NotNull IVariable process(@NotNull String key) {
-        if (recipe == null) return IVariable.empty();
-        return switch (key) {
-            case "description" -> IVariable.from(new TranslatableComponent(this.recipe.getResultItem().getDescriptionId()));
-            case "output" -> IVariable.from(this.recipe.getResultItem());
-            case "inputs" -> IVariable.wrapList(this.recipe.getIngredients().stream().map(IVariable::from).toList());
-            default -> IVariable.empty();
-        };
+    public IVariable process(@Nonnull String key) {
+        switch (key) {
+            case "description":
+                return IVariable.from(new TranslationTextComponent(this.recipe.getResultItem().getDescriptionId()));
+            case "output":
+                return IVariable.from(this.recipe.getResultItem());
+            case "inputs":
+                return IVariable.wrapList(this.recipe.getIngredients().stream()
+                        .map(IVariable::from)
+                        .collect(Collectors.toList()));
+            default:
+                return IVariable.empty();
+        }
     }
 
     public abstract  String getRecipeId();
